--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,4 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Pages#contact_us</h1>
   <p>Find me in app/views/pages/contact_us.html.erb</p>
+  <%= render 'shared/links' %>
 </div>
