--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -1,4 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Pages#privacy_policy</h1>
   <p>Find me in app/views/pages/privacy_policy.html.erb</p>
+  <%= render 'shared/links' %>
 </div>
